--- a/src/app/businesscenter/bclist/bclist.component.html
+++ b/src/app/businesscenter/bclist/bclist.component.html
@@ -45,17 +45,17 @@
         <tbody>
             <tr *ngFor = 'let item of List ' [tooltip]="popTemplate" (mouseover)='popup(item)'>
                 <td>
-                    {{item.Id}}
+                    {{item._id}}
                 </td>
-                <td>{{ item.Company}}
+                <td>{{ item.company}}
 
                 </td>
-                <td>   {{item.County}} </td>
-                <td>{{ item.Street}}</td>
+                <td>   {{item.county}} </td>
+                <td>{{ item.street}}</td>
                 <td>
                         <!-- <button type="button" class="btn btn-primary" (click) = showform(item.Id)>展示</button>    | -->
-                        <button type="button" class="btn btn-info" (click) = openform(item.Id)>編輯</button>    |
-                        <button type="button" class="btn btn-danger" (click) = delete(item.Id)>刪除</button>
+                        <button type="button" class="btn btn-info" (click) = openform(item._id)>編輯</button>    |
+                        <button type="button" class="btn btn-danger" (click) = delete(item._id)>刪除</button>
                 </td>
 
 
