--- a/src/app/businesscenter/userlist/userlist.component.html
+++ b/src/app/businesscenter/userlist/userlist.component.html
@@ -51,23 +51,23 @@
       <tbody>
           <tr *ngFor = 'let item of List ' [tooltip]="popTemplate" (mouseover)='popup(item)'>
               <td>
-                  {{item.Id}}
+                  {{item._id}}
               </td>
               <td>
-                {{item.Email}}
+                {{item.eMail}}
               </td>
-              <td>{{ item.FirstName}}
+              <td>{{ item.firstName}}
 
               </td>
-              <td>   {{item.LastName}} </td>
-              <td>{{ item.Cell}}</td>
+              <td>   {{item.lastName}} </td>
+              <td>{{ item.cell}}</td>
               <td>
-                {{item.Points}}
+                {{item.points}}
               </td>
               <td>
                       <!-- <button type="button" class="btn btn-primary" (click) = showform(item.Id)>展示</button>    | -->
-                      <button type="button" class="btn btn-info" (click) = openform(item.Id)>編輯</button>    |
-                      <button type="button" class="btn btn-danger" (click) = delete(item.Id)>刪除</button>
+                      <button type="button" class="btn btn-info" (click) = openform(item._id)>編輯</button>    |
+                      <button type="button" class="btn btn-danger" (click) = delete(item._id)>刪除</button>
               </td>
 
 
