--- a/src/app/clientinventory/paymentlist/paymentlist.component.html
+++ b/src/app/clientinventory/paymentlist/paymentlist.component.html
@@ -8,12 +8,22 @@
 <div class="row">
   <div class="col-sm-4">
     <button type="button" class="btn btn-success" onclick="location.href='#/teaportal';">返回管理頁面</button>
+    <p>
+      選擇資料來源模式:
+      <mat-button-toggle-group  name="fontStyle" aria-label="Font Style" [value]="selectedVal">
+        <mat-button-toggle value="Excel" (change)='onValChange($event.value)'>Excel上傳模式</mat-button-toggle>
+        <mat-button-toggle value="Self" (change)='onValChange($event.value)'>獨立資料庫模式</mat-button-toggle>
+      </mat-button-toggle-group>
+    </p>
   </div>
   <div class="col-sm-4">
 
   </div>
-  <div class="col-sm-4">
+  <div *ngIf="!SelfFunctionMode" class="col-sm-4">
     <button type="button" class="btn btn-warning" (click)="updateUsers()">更新付款人名單和庫存數量</button>
+  </div>
+  <div *ngIf="SelfFunctionMode" class="col-sm-4">
+    <button type="button" class="btn btn-danger" (click)="updateFullInvSubUsers()">更新付款人名單和庫存數量</button>
   </div>
 </div>
 
